Added : Swagger for Addlabel By id  API
